# vantyx-operations-bi

./: .gitignore  PROJECT_CASE_STUDY.md  README.md  SECURITY_NOTES.md  Vyntax_Plan_Assist_Access.example.json  index.html  package-lock.json  package.json
docs/: DEMO_SCRIPT.md
scripts/: create-plan-assist-access.mjs  desktop-verify.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Controls.tsx  DataSources.tsx  GopCommandCenter.tsx  Header.tsx  PeriodCard.tsx  ProjectionTable.tsx  PropertySetup.tsx  ReportingViewSelector.tsx  SavedSnapshots.tsx  SnapshotReport.tsx  WarehouseShiftPlanner.tsx  WeeklyGopControl.tsx
src/domain/: actionPlan.ts  aiActionPlan.ts  analyst.ts  calculations.ts  datePeriods.ts  demoData.ts  expenseBreakdown.ts  exporting.ts  formatters.ts  gopCommandData.ts  planAssistAccess.ts  propertySetup.ts  reporting.ts  snapshotReports.ts  storage.ts  types.ts  warehouse.ts  weeklyGopControl.ts
src/domain/integrations/: csvImport.ts  providerRegistry.ts  types.ts
src/domain/integrations/adapters/: csvAdapter.ts  hotelEffectivenessAdapter.ts  m3Adapter.ts  manualAdapter.ts  otelierAdapter.ts
src/test/: actionPlan.test.ts  aiActionPlan.test.ts  analyst.test.ts  calculations.test.ts  datePeriods.test.ts  demoData.test.ts  exporting.test.ts  integrations.test.ts  planAssistAccess.test.ts  warehouse.test.ts  weeklyGopControl.test.ts
